--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([myprogram], [1.0], [cheryxso@gmail.com])
+AC_INIT([http_server], [1.0], [cheryxso@gmail.com])
 AM_INIT_AUTOMAKE([foreign])
 AC_PROG_CXX
 AC_PROG_CC
